--- a/medial-queries3/index.html
+++ b/medial-queries3/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Media Queries 3</title>
-    <link rel="stylesheet" href="main3.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="a">a</div>
+
+<head>
+  <meta charset="utf-8">
+  <title>Media Queries 3</title>
+  <link rel="stylesheet" href="main3.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="a">
+      <header>a</header>
+    </div>
+    <aside>
       <div class="b">b</div>
       <div class="c">c</div>
       <div class="d">d</div>
       <div class="e">e</div>
       <div class="f">f</div>
       <div class="g">g</div>
+    </aside>
+    <main>
       <div class="h">h</div>
-    </div>
-  </body>
+    </main>
+  </div>
+</body>
+
 </html>
